# quicksocket

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  noxfile.py  test_html_webrtc_client.html  test_html_websocket_client.html
.cargo/: config
.github/workflows/: build.yml
archive/examples/: wip01_basic_websocket_client.html
example-usage/: quicksocket_with_types.py
examples/: use_server_from_rust.rs  wip00_basic_http_server.rs  wip01_basic_websocket_client.html  wip01_basic_websocket_server.rs
quicksocket/: server.py
src/: api.rs  lib.rs
src/server/: consumer_state.rs  mod.rs  state.rs  tokio_server.rs
tests/: test_handshake.py
