[package]
name = "quicksocket"
version = "0.1.1"
authors = ["Nick Benson <nickjbenson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple, natively parallel WebSocket server module for Python built with Rust, tokio, and pyo3."
homepage = "https://github.com/nickjbenson/quicksocket"
repository = "https://github.com/nickjbenson/quicksocket"
readme = "README.md"
keywords = ["python", "websocket"]
categories = ["web-programming::websocket"]
exclude = [
    ".github/*",
    ".vscode/*",
    "archive/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quicksocket"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python-Rust binding -- this library aims to compile into a native Python module.
pyo3 = "0.13.2"
# General dependencies.
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.8.3"
futures-util = { version = "0.3.13", default-features = false, features = ["async-await", "sink", "std"] }
# Tokio for async task management and hyper to run a basic http server.
tokio = { version = "1.3.0", features = ["full"] }
hyper = { version = "0.14.4", features = ["full"] }
# Tungstenite is the WebSocket backend.
tokio-tungstenite = "0.14.0"
tungstenite = { version = "0.13.0", default-features = false }

[features]
default = ["pyo3/extension-module"]
